# tg-gemini

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  config.example.toml  dev.sh  pyproject.toml  requirement.md
.claude/: settings.json  settings.local.json  system.md
.github/workflows/: main.yml
docs/: architecture.md  cli.md  commands.md  config.md  configuration.md  development.md  events.md  formatting.md  internals.md  message-flow.md  session-management.md
docs/cc-connect/: architecture-design.md  command-mapping.md  format-conversion.md  session-management.md
docs/gemini-cli/: cli-references.md  gemini-cli-headless.md  gemini-cli-reference.md  stream-json-specification.md  stream-json.md
docs/plan/: fix-set-commands-menu.md  v4-improvements.md
plans/: fix_test_ruff_errors.md  vectorized-coalescing-manatee.md
src/tg_gemini/: __init__.py  bot.py  card.py  cli.py  commands.py  config.py  engine.py  events.py  gemini.py  i18n.py  markdown.py  models.py  session.py  sessions.py  skills.py  streaming.py  telegram_platform.py
tests/: conftest.py  test_advanced.py  test_bot.py  test_card.py  test_claude.py  test_cli.py  test_commands.py  test_config.py  test_data.py  test_dedup.py  test_engine.py  test_events.py  test_gemini.py  test_i18n.py  test_main.py  test_markdown.py  test_models.py  test_ratelimit.py  test_session.py  test_sessions.py  test_skills.py  test_streaming.py  test_telegram.py
tests/integration/: conftest.py  test_session_lifecycle.py  test_tool_flow.py
