[build-system]
requires      = ["uv-build"]
build-backend = "uv_build"

[project]
name = "tg-gemini"
version = "0.1.0"
description = "Lightweight Telegram-Gemini CLI middleware"
dependencies = [
    "aiogram>=3.17.0",
    "pydantic>=2.9.2",
    "typer>=0.12.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "A.J.Zeller", email = "hello@atticux.me" }]
maintainers = [{ name = "A.J.Zeller", email = "hello@atticux.me" }]

[project.urls]
Homepage      = "https://github.com/atticuszeller/tg-gemini"
Issues        = "https://github.com/atticuszeller/tg-gemini/issues"
documentation = "https://atticuszeller.github.io/tg-gemini/"
Changelog     = "https://github.com/atticuszeller/tg-gemini/blob/main/CHANGELOG.md"

[project.scripts]
tg-gemini = "tg_gemini.cli:main"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=3.8.0",
    "git-cliff>=2.6.1",
    "bump-my-version>=0.28.0",
    "typos>=1.26.8",
]
lint = ["ruff>=0.6.3", "ty>=0.0.2"]
test = [
    "pytest>=8.3.2",
    "pytest-sugar>=1.0.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.6.1",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.39",
    "mkdocs-obsidian-bridge>=1.1.1",
    "mkdocs-publisher>=1.4.2",
    "pymdown-extensions>=10.11.1",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment         = "warn"

[tool.pytest.ini_options]
addopts        = "-rXs --strict-config --strict-markers --tb=short"
xfail_strict   = true
filterwarnings = ["error"]
pythonpath     = "src"
asyncio_mode   = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under   = 100
skip_covered = true
show_missing = true
precision = 2
exclude_lines = [
    'def __repr__',
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    'if typing.TYPE_CHECKING:',
    '@overload',
    '@typing.overload',
    '\(Protocol\)=$',
    'typing.assert_never',
    'assert_never',
    'if __name__ == .__main__.:',
]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "E501",    # line-too-long
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "T201",    # print
]

[tool.ruff.lint.isort]
combine-as-imports      = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "S101", "ANN"]

[tool.ruff.format]
docstring-code-format     = true
skip-magic-trailing-comma = true
